--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -1,4 +1,4 @@
-title: Nuxt UI Pro - SaaS template
+title: Nuxt UI Pro
 description: Nuxt UI Pro is a collection of premium Vue components built on top of Nuxt UI to create beautiful & responsive Nuxt applications in minutes.
 navigation: false
 hero:
@@ -10,7 +10,7 @@ hero:
     icon: i-heroicons-arrow-top-right-on-square-20-solid
   links:
     - label: Get started
-      to: '/signup'
+      to: /signup
       size: xl
       color: black
       icon: i-heroicons-arrow-right-20-solid
